# thodarudai

./: .env.postgres.example  .env.prod.example  .gitignore  KURI.org  README.org  VARALARU.org  VAZHU.org  backlog.org  changelog.org  explore_trie.py  neo4j.py  pyproject.toml  requirements.txt  tamil_editor_demo.py
archive/: explore_trie.py  trie.go  trie.py
backend/api/: app.py
cli/: build_word_index.py  load_words.py  train_tokenizer.py
data_prep/: KURI.org  kkk_wrapper.py
doc/: 2026-05-26--directory-restructure--IMPORTANT.org  2026-05-26--sanity.org  20260408T2133-project-overview.org  20260409T1214--data-files-generated.org  20260411T0024--three-days-summary.org  20260412T1242--chorkilai.org  20260412T1510--project-overview.org  20260523T1229--project-bootstrapping-and-usage-guide.org  20260523T1236--overall-architecture.org  20260523T1238--project-documentation.org  20260523T1241--code-refactor.org  ARCHITECTURE.org  DEPLOYMENT.org  DEVELOPER-REFERENCE.org  DOCS-ARCHIVE-INDEX.org  KURI.org  README_NEW.org  USER-GUIDE.org  YENNAIPADI.org  ground-up-redesign.org
docker/: .env.dev.example  docker-compose.dev.yml  docker-compose.prod.yml
emacs/: tamil-splits.el
tamilphonetic/: __init__.py  core.py
tools/: build_word_index.py  build_wordlist.py  common.py  curation_core.py  curation_index.py  export_batches_dataset.py  export_dataset.py  function_lengths.py  gui_qt_app.py  load_words.py  profile.py  storage.py  tamil_phonetic.py  train_tokenizer.py  trie_word_indexer.py  usage-guidelines.org  word_indexer.py  word_server.py
webui1/: __init__.py  app.py
(+38 files in other folders)
